     control whether the client tries to use roaming if enabled on the
     server. From Martin Forssen.
     ok markus@
   - markus@cvs.openbsd.org 2009/06/30 14:54:40
     [version.h]
     crank version; ok deraadt
   - dtucker@cvs.openbsd.org 2009/07/02 02:11:47
     [ssh.c]
     allow for long home dir paths (bz #1615).  ok deraadt
     (based in part on a patch from jchadima at redhat)

20090622
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2009/06/22 05:39:28
     [monitor_wrap.c monitor_mm.c ssh-keygen.c auth2.c gss-genr.c sftp-client.c]
     alphabetize includes; reduces diff vs portable and style(9).
     ok stevesk djm
     (Id sync only; these were already in order in -portable)

20090621
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2009/03/17 21:37:00
     [ssh.c]
     pass correct argv[0] to openlog(); ok djm@
  - jmc@cvs.openbsd.org 2009/03/19 15:15:09
     [ssh.1]
     for "Ciphers", just point the reader to the keyword in ssh_config(5), just
     as we do for "MACs": this stops us getting out of sync when the lists
     change;
     fixes documentation/6102, submitted by Peter J. Philipp
     alternative fix proposed by djm
     ok markus
   - tobias@cvs.openbsd.org 2009/03/23 08:31:19
     [ssh-agent.c]
     Fixed a possible out-of-bounds memory access if the environment variable
     SHELL is shorter than 3 characters.
     with input by and ok dtucker
   - tobias@cvs.openbsd.org 2009/03/23 19:38:04
     [ssh-agent.c]
     My previous commit didn't fix the problem at all, so stick at my first
     version of the fix presented to dtucker.
     Issue notified by Matthias Barkhoff (matthias dot barkhoff at gmx dot de).
     ok dtucker
   - sobrado@cvs.openbsd.org 2009/03/26 08:38:39
     [sftp-server.8 sshd.8 ssh-agent.1]
     fix a few typographical errors found by spell(1).
     ok dtucker@, jmc@
   - stevesk@cvs.openbsd.org 2009/04/13 19:07:44
     [sshd_config.5]
     fix possessive; ok djm@